--- a/index.html
+++ b/index.html
@@ -3,11 +3,46 @@
 <head>
 	<meta charset="utf-8">
 	<title>Module 2 Menu</title>
-	<link rel="stylesheet" type="text/css" href="style.css"/>
+	<link rel="stylesheet" type="text/css" href="css/style.css"/>
 </head>
 <body>
-<p>Test text</p>
 
+<!-- Header HTML starts here -->
+
+	<section class="header">
+		<div id="page-title">
+			<h2>Menu</h2>
+		</div>
+	</section>
+
+<!-- Body content HTML starts here -->
+
+	<section class="body">
+		<div class="menu-section" id="chicken">
+			<div class="menu-heading">
+				<h2>Chicken</h2>
+			</div>
+			<div class="menu-content">
+				<p>Bacon ipsum dolor amet andouille sirloin shoulder beef, short loin alcatra fatback pig flank landjaeger ground round. Strip steak pork belly chuck, pork loin ham sausage rump fatback leberkas pork landjaeger beef ribs. Chicken short ribs fatback bacon. Kielbasa ham hock jowl doner, ribeye picanha boudin. Tri-tip pancetta venison, short ribs prosciutto landjaeger t-bone porchetta rump biltong turkey jowl beef.</p>
+			</div>
+		</div>
+		<div class="menu-section" id="beef">
+			<div class="menu-heading">
+				<h2>Beef</h2>
+			</div>
+			<div class="menu-content">
+				<p>Bacon ipsum dolor amet andouille sirloin shoulder beef, short loin alcatra fatback pig flank landjaeger ground round. Strip steak pork belly chuck, pork loin ham sausage rump fatback leberkas pork landjaeger beef ribs. Chicken short ribs fatback bacon. Kielbasa ham hock jowl doner, ribeye picanha boudin. Tri-tip pancetta venison, short ribs prosciutto landjaeger t-bone porchetta rump biltong turkey jowl beef.</p>
+			</div>
+		</div>
+		<div class="menu-section" id="sushi">
+			<div class="menu-heading">
+				<h2>Sushi</h2>
+			</div>
+			<div class="menu-content">
+				<p>Bacon ipsum dolor amet andouille sirloin shoulder beef, short loin alcatra fatback pig flank landjaeger ground round. Strip steak pork belly chuck, pork loin ham sausage rump fatback leberkas pork landjaeger beef ribs. Chicken short ribs fatback bacon. Kielbasa ham hock jowl doner, ribeye picanha boudin. Tri-tip pancetta venison, short ribs prosciutto landjaeger t-bone porchetta rump biltong turkey jowl beef.</p>
+			</div>
+		</div>
+	</section>
 
 </body>
 </html>
