content update in menu content

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<h2>Beef</h2>
 			</div>
 			<div class="menu-content">
-				<p>Bacon ipsum dolor amet andouille sirloin shoulder beef, short loin alcatra fatback pig flank landjaeger ground round. Strip steak pork belly chuck, pork loin ham sausage rump fatback leberkas pork landjaeger beef ribs. Chicken short ribs fatback bacon. Kielbasa ham hock jowl doner, ribeye picanha boudin. Tri-tip pancetta venison, short ribs prosciutto landjaeger t-bone porchetta rump biltong turkey jowl beef.</p>
+				<p>Hello. Bacon ipsum dolor amet andouille sirloin shoulder beef, short loin alcatra fatback pig flank landjaeger ground round. Strip steak pork belly chuck, pork loin ham sausage rump fatback leberkas pork landjaeger beef ribs. Chicken short ribs fatback bacon. Kielbasa ham hock jowl doner, ribeye picanha boudin. Tri-tip pancetta venison, short ribs prosciutto landjaeger t-bone porchetta rump biltong turkey jowl beef.</p>
 			</div>
 		</div>
 		<div class="menu-section" id="sushi">
