--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Module 2 Menu</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css"/>
 </head>
@@ -10,36 +11,84 @@
 <!-- Header HTML starts here -->
 
 	<section class="header">
-		<div id="page-title">
-			<h2>Menu</h2>
+		<div class="title-div">
+			<h1 class="title">Menu</h1>
 		</div>
 	</section>
 
 <!-- Body content HTML starts here -->
 
+	<div class="row">
+	<!-- Chicken Section -->
+		<div class="col-lg-4 col-md-6 col-sm-12">
+			<div class="section" id="chicken">
+				<div class="menu-heading">
+					<h2>Chicken</h2>
+				</div>
+				<div class="menu-content">
+					<p>Bacon ipsum dolor amet andouille sirloin shoulder beef</p>
+				</div>
+			</div>
+		</div>
+
+	<!-- Beef Section -->
+		<div class="col-lg-4 col-md-6 col-sm-12">
+			<div class="section" id="beef">
+				<div class="menu-heading">
+					<h2>Beef</h2>
+				</div>
+				<div class="menu-content">
+					<p>Bacon ipsum dolor amet andouille sirloin shoulder beef</p>
+				</div>
+			</div>
+		</div>
+
+	<!-- Sushi Section -->
+		<div class="col-lg-4 col-md-12 col-sm-12">
+			<div class="section" id="sushi">
+				<div class="menu-heading">
+					<h2>Sushi</h2>
+				</div>
+				<div class="menu-content">
+					<p>Bacon ipsum dolor amet andouille sirloin shoulder beef</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
+
+
+
+
+
+
+<!-- Comment out --
 	<section class="body">
-		<div class="menu-section" id="chicken">
-			<div class="menu-heading">
-				<h2>Chicken</h2>
+		<div class="row">
+			<div class="menu-section" class="col-lg-3" id="chicken">
+				<div class="menu-heading">
+					<h2>Chicken</h2>
+				</div>
+				<div class="menu-content">
+					<p>Bacon ipsum dolor amet andouille sirloin shoulder beef</p>
+				</div>
 			</div>
-			<div class="menu-content">
-				<p>Bacon ipsum dolor amet andouille sirloin shoulder beef, short loin alcatra fatback pig flank landjaeger ground round. Strip steak pork belly chuck, pork loin ham sausage rump fatback leberkas pork landjaeger beef ribs. Chicken short ribs fatback bacon. Kielbasa ham hock jowl doner, ribeye picanha boudin. Tri-tip pancetta venison, short ribs prosciutto landjaeger t-bone porchetta rump biltong turkey jowl beef.</p>
+			<div class="menu-section" class="col-lg-3"id="beef">
+				<div class="menu-heading">
+					<h2>Beef</h2>
+				</div>
+				<div class="menu-content">
+					<p>Bacon ipsum dolor amet andouille sirloin shoulder beef</p>
+				</div>
 			</div>
-		</div>
-		<div class="menu-section" id="beef">
-			<div class="menu-heading">
-				<h2>Beef</h2>
-			</div>
-			<div class="menu-content">
-				<p>Hello. Bacon ipsum dolor amet andouille sirloin shoulder beef, short loin alcatra fatback pig flank landjaeger ground round. Strip steak pork belly chuck, pork loin ham sausage rump fatback leberkas pork landjaeger beef ribs. Chicken short ribs fatback bacon. Kielbasa ham hock jowl doner, ribeye picanha boudin. Tri-tip pancetta venison, short ribs prosciutto landjaeger t-bone porchetta rump biltong turkey jowl beef.</p>
-			</div>
-		</div>
-		<div class="menu-section" id="sushi">
-			<div class="menu-heading">
-				<h2>Sushi</h2>
-			</div>
-			<div class="menu-content">
-				<p>Bacon ipsum dolor amet andouille sirloin shoulder beef, short loin alcatra fatback pig flank landjaeger ground round. Strip steak pork belly chuck, pork loin ham sausage rump fatback leberkas pork landjaeger beef ribs. Chicken short ribs fatback bacon. Kielbasa ham hock jowl doner, ribeye picanha boudin. Tri-tip pancetta venison, short ribs prosciutto landjaeger t-bone porchetta rump biltong turkey jowl beef.</p>
+			<div class="menu-section" class="col-lg-3" id="sushi">
+				<div class="menu-heading">
+					<h2>Sushi</h2>
+				</div>
+				<div class="menu-content">
+					<p>Bacon ipsum dolor amet andouille sirloin shoulder beef</p>
+				</div>
 			</div>
 		</div>
 	</section>
