--- a/index.html
+++ b/index.html
@@ -53,43 +53,13 @@
 				<div class="menu-content">
 					<p>Bacon ipsum dolor amet andouille sirloin shoulder beef</p>
 				</div>
+					<p>Hello!</p>
 			</div>
 		</div>
 	</div>
-
-
-
-
-
-<!-- Comment out --
-	<section class="body">
-		<div class="row">
-			<div class="menu-section" class="col-lg-3" id="chicken">
-				<div class="menu-heading">
-					<h2>Chicken</h2>
-				</div>
-				<div class="menu-content">
-					<p>Bacon ipsum dolor amet andouille sirloin shoulder beef</p>
-				</div>
-			</div>
-			<div class="menu-section" class="col-lg-3"id="beef">
-				<div class="menu-heading">
-					<h2>Beef</h2>
-				</div>
-				<div class="menu-content">
-					<p>Bacon ipsum dolor amet andouille sirloin shoulder beef</p>
-				</div>
-			</div>
-			<div class="menu-section" class="col-lg-3" id="sushi">
-				<div class="menu-heading">
-					<h2>Sushi</h2>
-				</div>
-				<div class="menu-content">
-					<p>Bacon ipsum dolor amet andouille sirloin shoulder beef</p>
-				</div>
-			</div>
-		</div>
-	</section>
-
 </body>
 </html>
+
+
+
+
