--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
 				</div>
 				<div class="menu-content">
 					<p>Bacon ipsum dolor amet andouille sirloin shoulder beef</p>
+					<p>Paragraph</p>
+					<p>Paragraph</p>
 				</div>
 			</div>
 		</div>
